CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mb4d)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

OPTION(LOG_TRACE "Enable trace messages" OFF)
OPTION(LOG_ERROR "Enable error messages" ON)

IF(LOG_TRACE)
	ADD_DEFINITIONS(-DLOG_TRACE)
ENDIF()

IF(LOG_ERROR)
	ADD_DEFINITIONS(-DLOG_ERROR)
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} src/mb4d.c)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION /usr/bin)
